# gjr-garch-x

./: .gitignore  CITATION.cff  ISSUES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
src/gjr_garch_x/: __init__.py
tests/: test_estimator.py
