[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gjr-garch-x"
version = "0.1.0"
description = "GJR-GARCH models with exogenous regressors in the variance equation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Murad Farzulla", email = "murad@farzulla.org"}
]
maintainers = [
    {name = "Murad Farzulla", email = "murad@farzulla.org"}
]
keywords = [
    "garch",
    "gjr-garch",
    "glosten-jagannathan-runkle",
    "volatility",
    "econometrics",
    "time-series",
    "finance",
    "cryptocurrency",
    "event-study",
    "variance-modeling",
    "heteroskedasticity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/studiofarzulla/gjr-garch-x"
Documentation = "https://github.com/studiofarzulla/gjr-garch-x#readme"
Repository = "https://github.com/studiofarzulla/gjr-garch-x"
Issues = "https://github.com/studiofarzulla/gjr-garch-x/issues"
Changelog = "https://github.com/studiofarzulla/gjr-garch-x/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/gjr_garch_x"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["gjr_garch_x"]

[[tool.mypy.overrides]]
module = ["scipy.*", "pandas.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=gjr_garch_x --cov-report=term-missing"
